# Causally-Calibrated-LLM-as-Judge-for-Recommenders-A-Closed-Loop-Framework-for-Exposure-Aware-Evalua.

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
calib/: run_correlation.py  run_ips.py
configs/: movielens1m.yaml
data/judge/: judge_clean.parquet  judge_raw.jsonl  judge_raw.parquet
data/proc/: ml1m_items.parquet
data/props/: pairs.parquet  propensity.parquet  props_item.parquet
data/synth/: ml1m_tail_aug.parquet
exposynth/: constraints.py  run_synth.py
paper/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  tech_report.md
recjudge/: llm.py  pair_sampler.py  prompts.py  rjs_metric.py  run_judge.py
reports/: progress.json  progress.md
reports/tables/: corr_ml1m.csv  corr_ml1m_k10.csv  corr_ml1m_k5.csv  rjs_ml1m.csv
scripts/: health_check.py  llm_ping.py  prep_movielens.py
